Fix filesystem linking on clang9
Signed-off-by: Emerson Knapp <emerson.b.knapp@gmail.com>

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -35,9 +35,14 @@ if(BUILD_TESTING)
 
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_FLAGS MATCHES "-stdlib=libc\\+\\+")
     if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
+      # Filesystem introduced to experimental in LLVM 7.0
       set(FILESYSTEM_LIB c++experimental)
-    else()
+    elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+      # Before LLVM 9.0 you have to manually link the fs library
       set(FILESYSTEM_LIB c++fs)
+    else()
+      # Starting at LLVM 9.0 filesystem is built in
+      set(FILESYSTEM_LIB)
     endif()
   else()
     set(FILESYSTEM_LIB stdc++fs)
