--- a/pluginlib/package.xml
+++ b/pluginlib/package.xml
@@ -24,6 +24,7 @@
   <depend>ament_index_cpp</depend>
   <depend>class_loader</depend>
   <depend>rcutils</depend>
+  <depend>rcpputils</depend>
   <depend>tinyxml2_vendor</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
