adds QNX c++ fs library compiler option (#205)

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -39,6 +39,12 @@ if(BUILD_TESTING)
     else()
       set(FILESYSTEM_LIB c++fs)
     endif()
+  elseif(CMAKE_CXX_COMPILER_ID MATCHES "QCC")
+    if(CMAKE_CXX_FLAGS MATCHES "-stdlib=libc\\+\\+")
+      set(FILESYSTEM_LIB c++fs)
+    else()
+      set(FILESYSTEM_LIB)
+    endif()
   else()
     set(FILESYSTEM_LIB stdc++fs)
   endif()
