use catkin_install_python instead of changing shebang line
Signed-off-by: Mikael Arguedas <mikael.arguedas@gmail.com>

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -39,5 +39,5 @@ endif()
 install(DIRECTORY include/pluginlib/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
-install(PROGRAMS scripts/pluginlib_headers_migration.py
+catkin_install_python(PROGRAMS scripts/pluginlib_headers_migration.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
