make the default filesystem lib c++fs unless otherwise specified

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -39,10 +39,10 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_FLAGS MATCHES "-stdlib=li
     set(FILESYSTEM_LIB)
   endif()
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "QCC")
-  if(CMAKE_CXX_FLAGS MATCHES "-stdlib=libc\\+\\+")
-    set(FILESYSTEM_LIB c++fs)
+  if(CMAKE_CXX_FLAGS MATCHES "-stdlib=libstdc\\+\\+")
+    set(FILESYSTEM_LIB stdc++fs)
   else()
-    set(FILESYSTEM_LIB)
+    set(FILESYSTEM_LIB c++fs)
   endif()
 else()
   set(FILESYSTEM_LIB stdc++fs)
