--- a/pluginlib/package.xml
+++ b/pluginlib/package.xml
@@ -7,17 +7,20 @@
     The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
     To work, these tools require plugin providers to register their plugins in the package.xml of their package.
   </description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
+
   <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
+
   <license>BSD</license>
   <url>http://www.ros.org/wiki/pluginlib</url>
   <url type="bugtracker">https://github.com/ros/pluginlib/issues</url>
   <url type="repository">https://github.com/ros/pluginlib</url>
-  <author>Eitan Marder-Eppstein</author>
-  <author>Tully Foote</author>
+
   <author>Dirk Thomas</author>
+  <author>Eitan Marder-Eppstein</author>
+  <author email="michael@openrobotics.org">Michael Carroll</author>
   <author>Mirza Shah</author>
   <author email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</author>
+  <author>Tully Foote</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
